syntax="proto3";

package person;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

message Person {
    fixed64 id = 1 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = 'db:"id"'];
    string name = 2 [(gogoproto.jsontag) = "name", (gogoproto.moretags) = 'db:"name"'];
    uint32 age = 3 [(gogoproto.jsontag) = "age", (gogoproto.moretags) = 'db:"age"'];
}

message CreateRequest {
    string api = 1;
    Person person = 2;
}

message CreateResponse {
    string api = 1;
    fixed64 user_id = 2;
}

message ReadRequest {
    string api = 1;
    fixed64 user_id = 2;
}

message ReadResponse {
    string api = 1;
    Person person = 2;
}

message UpdateRequest {
    string api = 1;
    Person person = 2;
}

message UpdateResponse {
    string api = 1;
    fixed64 changed_id = 2;
}

message DeleteRequest {
    string api = 1;
    fixed64 user_id = 2;
}

message DeleteResponse {
    string api = 1;
    fixed64 deleted_id = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;
    repeated Person persons = 2;
}

service PersonService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}





